continued to work on database connection

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 deploy.ant.properties.file=/Users/dvernazza/Library/Application Support/NetBeans/8.1/tomcat80.properties
+file.reference.tomcat-dbcp.jar=/Users/dvernazza/Desktop/homework4/tomcat-dbcp.jar/tomcat-dbcp.jar
 j2ee.server.home=/usr/local/Cellar/tomcat/8.0.35/libexec
 j2ee.server.instance=tomcat80:home=/usr/local/Cellar/tomcat/8.0.35/libexec
 javac.debug=true
