--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.joda-time-2.0.jar=joda-time-2.0.jar/joda-time-2.0.jar
 file.reference.tomcat-dbcp.jar=/Users/dvernazza/Downloads/tomcat-dbcp.jar/tomcat-dbcp.jar
 includes=**
 j2ee.compile.on.save=true
@@ -40,7 +41,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.jstl.classpath}:\
     ${file.reference.tomcat-dbcp.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.joda-time-2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
